Changed the navbar to be fixed and scroll with use on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ a:visited {
         color: #ffffff;
       }
 a:hover {
-        color: #d3eaff;
+        color: #e3f2ff;
         transition-duration: 0.5s;
       }
 a:active {
@@ -61,53 +61,37 @@ a:active {
         width: auto;
         height: 20px;
     }
-
-    .info   {
+/*Grey color code: #4d4d4d */
+    .navbar   {
         text-align: center;
         list-style-type: none;
+        background-color: #4d4d4d;
+        position: fixed;
+        top: 0;
+        width: 100%;
+        margin-bottom: 25pt;
         margin-left: auto;
         margin-right: auto;
-        background-color: #000000;
-        opacity: 0.7;
+        overflow: hidden;
     }
-    .info li {
+    .navbar li {
         display:inline-block;    
         object-fit: scale-down; 
         max-width: 100%;
         width: clamp(2rem);
         padding: 0;
+
     }
-    .info li a {
-        background-color:#000000;
+    .navbar li a {
         display: block;
         padding: 0.5rem;
         padding-left: 3vw;
         padding-right: 3vw;
         border-radius: 1px;
-        transition: background-color 0.5s;
-        opacity: 0.7;
-        
+        transition: background-color 0.5s;        
     }
-    .info li a:hover   {
+    .navbar li a:hover   {
         background-color: #707070; 
-    }
-    .nav    {
-        margin-left: auto;
-        margin-right: auto;
-        width: wrapper;
-    }
-
-    .nav li a {
-        background-color:#7f7f7f;
-        font-size: 20pt;
-        display: block;
-        padding: 0.5rem;
-        padding-left: 12vw;
-        padding-right: 12vw;
-        border-radius: 1px;
-        transition: background-color 0.5s;
-        opacity: 0.7;
-        object-fit: scale-down; 
     }
 
 /*! Adding custom fonts*/
